--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "cron": "^1.3.0",    
+    "cron": "^1.3.0",
+    "dotenv": "^6.2.0",
     "kue": "^0.11.6",
     "speedtest-net": "^1.4.2"
   }
