--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "cron": "^1.3.0",
+    "cron": "^1.7.0",
     "dotenv": "^6.2.0",
+    "extend": "^3.0.2",
     "kue": "^0.11.6",
-    "speedtest-net": "^1.4.2"
+    "speedtest-net": "^1.5.1"
   }
 }
